# Lethe

./: .gitignore  LICENSE  README.md  pyproject.toml
lethe/: config.py  main.py
lethe/src/: main.py
lethe/src/bronze/: ingestion.py
lethe/src/config/schema_contracts/: transactions.yml
lethe/src/database/: connection.py
lethe/src/readers/: csv_reader.py
lethe/src/utils/: logging_config.py
lethe/tests/readers/: test_csv_reader.py
