[project]
name = "Lethe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "DeadManLogan", email = "grigoroudisdimosthenis@gmail.com"},
]
dependencies = ["duckdb>=1.4.3"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
lint = [
    "ruff>=0.14.10",
    "black>=25.12.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "B", "N", "D"]
ignore = ["D104"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pdm.scripts]
lint = { composite = [
    "ruff check .",
    "black --check ."
] }
format = { composite = [
    "black .",
    "ruff check . --fix"
] }


